--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -25,18 +25,18 @@ jobs:
       - name: Transfer compose.yml to remote server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.REMOTE_KEY }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: ./compose.yml
           target: ~/deploy/
       # Desplegar la aplicación en el servidor remoto usando docker-compose
       - name: Deploy with Docker Compose
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.REMOTE_KEY }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/deploy
             sudo chmod 666 /var/run/docker.sock
