--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -19,8 +19,8 @@ jobs:
       # Construir y subir la imagen de la aplicación
       - name: Build and push PHP Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/calculadora54:v1 .
-          docker push ${{ secrets.DOCKER_USERNAME }}/calculadora54:v1
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/calculadora64:V1 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/calculadora64:V1
       # Transferir el archivo compose.yml al servidor remoto
       - name: Transfer compose.yml to remote server
         uses: appleboy/scp-action@master
